[package]
name = "just-tree"
version = "0.1.0"
edition = "2021"
description = "A simple Node struct"
homepage = "https://github.com/DenisGorbachev/just-tree"
repository = "https://github.com/DenisGorbachev/just-tree"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = "A simple Node struct"
tagline = ""
summary = ""
announcement = ""
readme = {}

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
fmt-derive = "0.1.2"
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }

[package.metadata.cargo-machete]
ignored = ["derive_more", "derive-getters", "derive-new", "fmt-derive", "stub-macro", "standard-traits", "helpful", "subtype"]






