[package]
name = "treenode"
version = "0.1.0"
edition = "2021"
description = "A simple Node struct"
homepage = "https://github.com/DenisGorbachev/treenode"
repository = "https://github.com/DenisGorbachev/treenode"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = "A simple Node struct"
tagline = ""
summary = ""
announcement = ""

[dependencies]
derive-new = "0.7.0"
derive_builder = "0.20.0"
derive_setters = { version = "0.1.0" }
serde = { version = "1.0.0", features = ["derive"], optional = true }

[package.metadata.cargo-machete]
ignored = ["derive_more", "derive-getters", "derive-new", "fmt-derive", "stub-macro", "standard-traits", "helpful", "subtype"]
