[package]
name = "treenode"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A simple Node struct"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/treenode"
repository = "https://github.com/DenisGorbachev/treenode"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = "A simple Node struct"
tagline = ""
summary = ""
announcement = ""

[dependencies]
derive-new = "0.7.0"
derive_builder = "0.20.0"
derive_setters = { version = "0.1.0" }
serde = { version = "1.0.0", features = ["derive"], optional = true }
strum = { version = "0.27.1", features = ["derive"] }

[package.metadata.cargo-machete]
ignored = [
    "derive-getters",
    "derive-new",
    "derive_more",
    "fmt-derive",
    "helpful",
    "standard-traits",
    "strum",
    "stub-macro",
    "subtype"
]
